Solved problems with too large paste canvas, simplified ts-paint component DOM

--- a/ts-paint/src/app/components/menu/menu.component.less
+++ b/ts-paint/src/app/components/menu/menu.component.less
@@ -21,7 +21,7 @@
 .tsp-menu__menu-level-2-container{
   display: none;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   background-color: @color--lighter-grey;
   color: black;
   top: 19px;
