--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.less
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.less
@@ -14,26 +14,15 @@
   box-sizing: border-box;
 }
 
-.tsp-ts-paint__canvas-container{
-  //background-color: @color--grey;
+.tsp-ts-paint__image_scroller{
+  background-color: @color--grey;
   position: relative;
   overflow: auto;
 }
 
-.tsp-ts-paint__image-container{
-  position: relative;
-  top: 3px;
-  left: 3px;
-  width: 0px;
-  height: 0px;
-}
-
-.tsp-ts-paint__space-filler-container{
+.tsp-ts-paint__image-padding{
   position: absolute;
   min-width: 100%;
-}
-
-.tsp-ts-paint__space-filler{
-  background-color: @color--grey;
-  z-index: 1;
+  padding: 3px;
+  box-sizing: border-box;
 }
